# DeepPhase

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  dlt2_optimization_suggestions.txt  fluid_solution.csv  output.csv.csv  output.txt
.ipynb_checkpoints/: bubble_prof_stream-checkpoint.ipynb
cmake/: CompilerWarnings.cmake  DeepPhaseConfig.cmake.in  FindGSL.cmake
example/: CMakeLists.txt  run_fluid_profile.cpp  run_gw_spectrum.cpp  run_kinetic_spectrum.cpp  run_profile.cpp
include/: CubicSpline.tpp  constants.hpp  deepphase.hpp  hydrodynamics.hpp  maths_ops.hpp  phasetransition.hpp  physics.hpp  profile.hpp  spectrum.hpp  spectrum.tpp  tests.hpp  vector.tpp
old/: list-of-py-funcs.py  main.cpp  profile.cpp  spectrum.cpp
src/: CubicSpline.tpp  PhaseTransition.cpp  PhaseTransition.hpp  constants.hpp  hydrodynamics.cpp  hydrodynamics.hpp  main.cpp  maths_ops.cpp  maths_ops.hpp  phasetransition.cpp  physics.cpp  physics.hpp  profile.cpp  profile.hpp  rk4_solver.cpp  rk4_solver.hpp  spectrum.cpp  spectrum.hpp  spectrum.tpp  tests.cpp  tests.hpp  vector.tpp
unit_tests/: CMakeLists.txt  catch_main.cpp  test_fluidprofile.cpp  test_maths.cpp  test_powerspec.cpp  test_rk4.cpp
